Fix card padding on mobile

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -257,8 +257,10 @@ body {
   @extend .main--file-page;
   padding: 0;
 
-  > * {
-    width: auto;
+  @media (min-width: $breakpoint-small) {
+    > * {
+      width: auto;
+    }
   }
 
   .card-stack {
